--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "license": "",
     "devDependencies": {
         "@figma/plugin-typings": "^1.17.1",
-        "@rollup/plugin-commonjs": "^15.0.0",
-        "@rollup/plugin-node-resolve": "^9.0.0",
-        "@rollup/plugin-replace": "^2.3.3",
+        "@rollup/plugin-commonjs": "^18.0.0",
+        "@rollup/plugin-node-resolve": "^11.2.1",
+        "@rollup/plugin-replace": "^2.4.2",
         "@types/jest": "^26.0.14",
         "@types/react": "^16.9.46",
         "@types/react-dom": "^16.9.8",
@@ -42,19 +42,18 @@
         "prettier": "^2.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "rollup": "^2.26.4",
+        "rollup": "^2.44.0",
         "rollup-plugin-html-bundle": "^0.0.3",
         "rollup-plugin-node-builtins": "^2.1.2",
-        "rollup-plugin-postcss": "^3.1.6",
-        "rollup-plugin-scss": "^2.6.0",
-        "rollup-plugin-typescript2": "^0.27.2",
+        "rollup-plugin-postcss": "^4.0.0",
+        "rollup-plugin-scss": "^2.6.1",
+        "rollup-plugin-typescript2": "^0.30.0",
         "serialize-error": "^7.0.1",
         "ts-jest": "^26.4.1",
         "typescript": "^4.0.2"
     },
     "dependencies": {
-        "drah-client": "^0.2.1",
-        "drah-server": "^0.2.0",
+        "drah-figma": "^0.3.0",
         "js-csvparser": "^1.5.0",
         "react-figma-plugin-ds": "^2.0.5"
     }
