--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,5 @@
 {
-    "name": "Localise from csv",
-    "id": "918931812316852557",
+    "name": "Figma prepare design system",
     "api": "1.0.0",
     "main": "dist/main.js",
     "ui": "dist/ui.html"
