--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "figma-localise-from-csv",
+    "name": "figma-prepare-design-syste",
     "version": "1.0.0",
     "source": "code/code.ts",
     "targets": {
@@ -11,7 +11,7 @@
     "browserslist": [
         "last 1 Chrome version"
     ],
-    "description": "For each content row in a csv, duplicates a frame, replacing any text content which matches a columns title",
+    "description": "",
     "main": "code.js",
     "scripts": {
         "typecheck": "tsc --noEmit",
@@ -40,21 +40,29 @@
         "jest": "^26.6.0",
         "postcss-import": "^12.0.1",
         "prettier": "^2.1.0",
-        "react": "^16.13.1",
+        "react": "^17.0.2",
         "react-dom": "^16.13.1",
         "rollup": "^2.44.0",
+        "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-html-bundle": "^0.0.3",
         "rollup-plugin-node-builtins": "^2.1.2",
         "rollup-plugin-postcss": "^4.0.0",
         "rollup-plugin-scss": "^2.6.1",
+        "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.30.0",
         "serialize-error": "^7.0.1",
         "ts-jest": "^26.4.1",
         "typescript": "^4.0.2"
     },
     "dependencies": {
-        "drah-figma": "^0.3.0",
+        "css-loader": "^5.2.0",
+        "drah-figma": "^0.4.0",
         "js-csvparser": "^1.5.0",
-        "react-figma-plugin-ds": "^2.0.5"
+        "node-sass": "^5.0.0",
+        "react-figma": "^0.13.0",
+        "react-figma-plugin-ds": "^2.0.5",
+        "react-jsx-parser": "^1.28.3",
+        "sass-loader": "^11.0.1",
+        "style-loader": "^2.0.0"
     }
 }
